--- a/.github/workflows/ci_test-full.yml
+++ b/.github/workflows/ci_test-full.yml
@@ -52,10 +52,12 @@ jobs:
     - name: Setup macOS
       if: runner.os == 'macOS'
       run: |
+        python -c "print('PYTEST_TIMEOUT=--timeout=120')" >> $GITHUB_ENV
         brew install gcc libomp ffmpeg # https://github.com/pytorch/pytorch/issues/20030
     - name: Setup Linux
       if: runner.os == 'Linux'
       run: |
+        python -c "print('PYTEST_TIMEOUT=--timeout=120')" >> $GITHUB_ENV
         sudo apt update --fix-missing
         sudo apt install -y ffmpeg
     - name: Setup Windows
@@ -101,7 +103,7 @@ jobs:
         TEST_DIRS: "${{ needs.check-diff.outputs.test-dirs }}"
       run: |
         phmdoctest README.md --outfile tests/test_readme.py
-        python -m pytest torchmetrics $TEST_DIRS --cov=torchmetrics --junitxml="junit/$PYTEST_ARTEFACT" --durations=50
+        python -m pytest torchmetrics $TEST_DIRS --cov=torchmetrics --junitxml="junit/$PYTEST_ARTEFACT" --durations=50 "$PYTEST_TIMEOUT"
 
     - name: Upload pytest test results
       uses: actions/upload-artifact@v2
